[package]
name = "binance-stream-handler"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"                # Set your true MSRV after CI verifies it
description = "Ergonomic, async WebSocket/HTTP client pieces for Binance market data streams."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourname/binance-stream-handler"
homepage = "https://github.com/yourname/binance-stream-handler"
documentation = "https://docs.rs/binance-stream-handler"
keywords = ["binance", "websocket", "crypto", "market-data", "stream"]
categories = ["api-bindings", "asynchronous", "network-programming"]
# Ship only what users need
include = [
  "src/**",
  "Cargo.toml",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "CHANGELOG.md",
  "examples/**"
]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
tokio-stream = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ordered-float = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[package.metadata.docs.rs]
# Keep docs builds light and deterministic
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
